Fix Focus Ring for UserAvatarButton

Add Empty Border around UserAvatarButton to create space for focus ring
Change focus ring shape to same shape as Button
Compensate for extra space needed in TopShortcutsView and FeaturePodsContainer

Bug: 922423
Test: Manual Test on PixelBook
Change-Id: Ib5c069e9cfb4619faaa34f474e1a83ef5b765417
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1542498
Auto-Submit: Ahmed Mehfooz <amehfooz@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Tim Song <tengs@chromium.org>
Commit-Queue: Ahmed Mehfooz <amehfooz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#649752}
Former-commit-id: 08676340ef1fbf476d0025df34ecca2382e43095